最新消息內容若有網址，則自動轉換成符合無障礙的 html 連結

--- a/yascms/themes/yascms2020/frontend/news_get.jinja2
+++ b/yascms/themes/yascms2020/frontend/news_get.jinja2
@@ -43,7 +43,7 @@
               {{ news.content|safe }}
             {% else %}
               {% autoescape false %}
-              {{ news.content | e | replace('\n', '<br>') }}
+              {{ news.content | linkify | replace('\n', '<br>') }}
               {% endautoescape %}
             {% endif %}
           </span>
