調整頁面以符合無障礙需求

--- a/yascms/themes/yascms2020/frontend/layouts/master.jinja2
+++ b/yascms/themes/yascms2020/frontend/layouts/master.jinja2
@@ -15,7 +15,7 @@
 {% block banner %}
 <div class="jumbotron jumbotron-fluid jumbotron-bg my-0">
   <div class="container">
-    <div class="bg-trans p-2 text-white">
+    <div class="p-2 text-white">
       <h1 class="display-4 d-md-block d-sm-none d-none">{{ request.site_config['site_name'] }}</h1>
       <p class="lead">{{ request.site_config['site_slogan'] }}</p>
     </div>
