--- a/yascms/themes/yascms2020/frontend/macros.jinja2
+++ b/yascms/themes/yascms2020/frontend/macros.jinja2
@@ -10,7 +10,7 @@
       <div class="col-12">
         <div class="card mb-3">
         <div class="table-responsive">
-          <table class="table table-hover table-striped text-center mb-0">
+          <table class="table table-hover text-center mb-0">
             <thead>
               <tr>
                 <th scope="col" class="d-none d-md-table-cell">編號</th>
