--- a/yascms/themes/yascms2020/frontend/search.jinja2
+++ b/yascms/themes/yascms2020/frontend/search.jinja2
@@ -1,9 +1,9 @@
 {% extends 'layouts/master.jinja2' %}
 {% block content %}
 <nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
+  <ol class="breadcrumb bg-white">
     <li class="breadcrumb-item"><a href="{{ request.route_url('homepage') }}">首頁</a></li>
-    <li class="breadcrumb-item active" aria-current="page">搜尋</li>
+    <li class="breadcrumb-item" aria-current="page">搜尋</li>
   </ol>
 </nav>
 
