--- a/yascms/themes/yascms2020/frontend/layouts/footer.jinja2
+++ b/yascms/themes/yascms2020/frontend/layouts/footer.jinja2
@@ -11,7 +11,7 @@
       </div>
       <div class="col d-none d-sm-block">
         {% if request.site_config['site_map_embedded_url'] %}
-          <iframe title="map-location" class="h-100 w-100" src="{{ request.site_config['site_map_embedded_url'] }}" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe title="地圖嵌入區塊" class="h-100 w-100" src="{{ request.site_config['site_map_embedded_url'] }}" frameborder="0" style="border:0" allowfullscreen></iframe>
         {% endif %}
       </div>
     </div>
